--- a/index.html
+++ b/index.html
@@ -53,29 +53,18 @@
 
       <p>texte de l'autre presentation</p>
 
-    </div>
-
-      <div class="page contact hidden">
-
-        <form action="">
-
-          <div>
-            <input type="text" placeholder="votre email">
-          </div>
-          <div>
-                      <input type="text" name="" id="" placeholder="votre message">
-
-          </div>
-            <div>
-              <input type="submit" value="Envoyer">
-
-
-            </div>
-
-        </form>
-
-
       </div>
+
+        <div class="page contact hidden">
+
+          <form action="https://formsubmit.co/mathis.lemeunier@gmail.com" method="POST">
+            <input type="text" name="name" required>
+            <input type="email" name="email" required>
+            <button type="submit">Send</button>
+      </form>
+
+
+        </div>
 
 
 
